local-nav added

--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <div class="w3-half w3-padding">
       
-      <form class="w3-container" action='<%=request.getAttribute("actionUrl") %>' method="post" autocomplete="off" name="logonform">
+      <form class="w3-container" action='/account' method="get" autocomplete="off" name="logonform">
         <legend>British Library Online Account</legend>
 
         <div class="w3-row w3-section">
