Fleshed out app. Created /account resource

--- a/login.html
+++ b/login.html
@@ -1,10 +1,10 @@
-<div class="w3-half w3-padding">
+<div class="cw3-half w3-padding" style="margin:auto;max-width:50%;">
       
-      <form class="w3-container" action='/account' method="get" autocomplete="off" name="logonform">
+      <form class="w3-container" action="home" method="get" autocomplete="on" name="logonform">
         <legend>British Library Online Account</legend>
 
         <div class="w3-row w3-section">
-          <label>Username or email address</label>
+          <label>Username</label>
           <input class="w3-input w3-border bl-pale-yellow" 
               type="text" name="j_username" 
                             id="username"
