--- a/account.html
+++ b/account.html
@@ -1,5 +1,37 @@
-<div class="w3-half w3-padding">
+<div class="xw3-half xw3-padding" style="margin:auto;max-width:50%;">
 
+<div class="w3-containter w3-card-4">
+
+
+<div class="w3-container bl-theme-mid">
 <h2>Account details</h2>      
-      
+</div>
+
+<form class="w3-container w3-padding">
+
+<div class="w3-padding">
+<label class=""><b>Title</b></label>
+<input class="w3-input w3-border" type="text">
+</div>
+
+<div class="w3-padding">
+<label class=""><b>First Name</b></label>
+<input class="w3-input w3-border" type="text">
+</div>
+
+ <div class="w3-padding">
+<label class=""><b>Last Name</b></label>
+<input class="w3-input w3-border" type="text">
+ </div>
+
+<div class="w3-padding">
+<label class=""><b>Email address</b></label>
+<input class="w3-input w3-border" type="text">
+</div>
+
+<div class="w3-row w3-padding">
+<button class="w3-btn bl-theme-mid w3-right">Update</button>
+</div>
+</form>
+</div>
 </div>
