--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css"-->
   <link rel="stylesheet" xhref="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/w3.css">
-  <link rel="stylesheet" href="css/bl-w3.css">
-  <link rel="stylesheet" href="css/bl-theme-green.css">
+  <link rel="stylesheet" href="/css/w3.css">
+  <link rel="stylesheet" href="/css/bl-w3.css">
+  <link rel="stylesheet" href="/css/bl-theme-green.css">
 <script 
   xsrc="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
@@ -24,14 +24,16 @@
 
   <header class="">
     <div class="w3-container bl-theme-dark bl-padding-left-off bl-logo-height bl-header-border w3-hide-small">
-      <div class="w3-left"><img class="bl-logo-border" src="images/bl_logo_100.gif" width="52px" height="100px"/></div>
+      <div class="w3-left"><img class="bl-logo-border" src="/images/bl_logo_100.gif" width="52px" height="100px"/></div>
     </div>
-    <!--# include file="view/service-title.html" -->
-    <!--# include file="view/local-nav.html" -->
+    <!--# include file="/controller/service-title.html" -->
+    <!--# include file="/controller/local-nav.html" -->
   </header>
 
   <div class="w3-container bl-white w3-padding-16 bl-content-height">
      <!--# include file="$inc.html" -->
   </div>
+
+<!--# include file="controller/debug.html" -->
 </body>
 </html>
